tests/examples/good/garbage_collector/good035.lat
int main() {
    A a = newA();

    return 0;
}

A newA() {return new A;}

class A {
    int a;
    int b;
    int c;
}