tests/examples/bad/type_not_subtype_of2.lat
int main() {
    A a;
    C c;
    a = c;
    return 0;
}

class A {}
class C {}